--- a/index.html
+++ b/index.html
@@ -287,8 +287,37 @@
       label: { enabled: false }
     })));
 
-    // Rest of your script (fetchLiveData, localStorage calls, alerts, sell advice, etc.) remains the same as previous version
-    // ... paste your existing fetchLiveData, saveCall, updatePreviousCalls, alerts, sell advice, etc. here ...
+    // Live prices
+    async function fetchLiveData() {
+      try {
+        const response = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
+          headers: { 'x-cg-pro-api-key': 'CG-16CjgPwWeLeNVZnNRmrfXiUz' }
+        });
+        if (!response.ok) throw new Error('API error');
+        const data = await response.json();
+        const pricesDiv = document.getElementById('prices');
+        pricesDiv.innerHTML = '';
+        data.forEach(coin => {
+          const div = document.createElement('div');
+          div.className = 'price-item';
+          div.innerHTML = `
+            <strong>${coin.name}</strong><br>
+            <span style="font-size:1.4em;">$${coin.current_price.toLocaleString()}</span> 
+            <span style="color:${coin.price_change_percentage_24h >= 0 ? '#56d364' : '#f85149'};">${coin.price_change_percentage_24h.toFixed(2)}%</span>
+          `;
+          pricesDiv.appendChild(div);
+        });
+      } catch (e) {
+        document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed — refresh</p>';
+      }
+    }
+    fetchLiveData();
+
+    // Status & advice
+    document.getElementById('statusBadge').innerHTML = '🟡 WATCHING';
+    document.getElementById('statusBadge').style.background = '#ffeb3b';
+    document.getElementById('statusBadge').style.color = 'white';
+    document.getElementById('actionAdvice').innerHTML = 'What you should do right now: Hold or buy dips.';
   </script>
 </body>
 </html>
