--- a/index.html
+++ b/index.html
@@ -88,8 +88,37 @@
     #previousCalls { background: #161b22; border: 1px solid #30363d; }
     #predictionAccuracy { background: #161b22; border: 1px solid #30363d; text-align: center; }
     #confidenceGauge { width: 200px; height: 200px; margin: 30px auto; }
-    .phase-bar { height: 40px; width: 100%; margin: 0 0 20px 0; border-radius: 12px; overflow: hidden; display: flex; box-shadow: 0 4px 20px rgba(0,0,0,0.5); }
-    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; }
+    .phase-bar { 
+      height: 50px; 
+      width: 100%; 
+      margin: 0 0 25px 0; 
+      border-radius: 16px; 
+      overflow: hidden; 
+      display: flex; 
+      background: linear-gradient(to right, #10b981, #34d399); /* Green loading bar gradient */
+      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
+    }
+    .phase-segment { 
+      flex: 1; 
+      display: flex; 
+      align-items: center; 
+      justify-content: center; 
+      font-weight: bold; 
+      color: white; 
+      text-shadow: 1px 1px 4px black; 
+      font-size: 0.95em; 
+      transition: all 0.3s; 
+    }
+    .phase-segment:hover { 
+      transform: scale(1.05); 
+      box-shadow: inset 0 0 15px rgba(255,255,255,0.4); 
+    }
+    .current-phase { 
+      background: #22c55e !important; /* Bright green highlight */
+      font-size: 1.1em; 
+      font-weight: 900; 
+      box-shadow: inset 0 0 20px rgba(255,255,255,0.5); 
+    }
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
     .collapsible-section { margin: 15px 0; }
     .collapsible-header { cursor: pointer; padding: 10px; background: #21262d; border-radius: 8px; font-weight: bold; transition: all 0.2s; }
@@ -105,11 +134,19 @@
   <div class="container">
     <div class="chart-area">
       <div class="phase-bar">
-        <div class="phase-segment" style="background:#ff6b6b;">Euphoria</div>
-        <div class="phase-segment" style="background:#ffab91;">Thrill/Retail</div>
-        <div class="phase-segment" style="background:#8bc34a;">Belief/Breakout</div>
-        <div class="phase-segment" style="background:#fff176;">Hope</div>
-        <div class="phase-segment" style="background:#4caf50;">Current</div>
+        <div class="phase-segment">Disbelief</div>
+        <div class="phase-segment">Hope</div>
+        <div class="phase-segment">Optimism</div>
+        <div class="phase-segment">Belief</div>
+        <div class="phase-segment">Thrill</div>
+        <div class="phase-segment">Euphoria</div>
+        <div class="phase-segment">Complacency</div>
+        <div class="phase-segment">Anxiety</div>
+        <div class="phase-segment">Denial</div>
+        <div class="phase-segment">Panic</div>
+        <div class="phase-segment">Capitulation</div>
+        <div class="phase-segment">Anger</div>
+        <div class="phase-segment current-phase">Depression</div> <!-- Change 'current-phase' class to any phase you want highlighted -->
       </div>
       <canvas id="myChart"></canvas>
     </div>
@@ -228,64 +265,6 @@
         }
       }
     });
-
-    // Drawing tool (click + drag to draw lines)
-    let drawing = false;
-    let startX, startY;
-    let drawings = JSON.parse(localStorage.getItem('drawings')) || [];
-
-    ctx.canvas.addEventListener('mousedown', (e) => {
-      const rect = ctx.canvas.getBoundingClientRect();
-      startX = e.clientX - rect.left;
-      startY = e.clientY - rect.top;
-      drawing = true;
-    });
-
-    ctx.canvas.addEventListener('mousemove', (e) => {
-      if (!drawing) return;
-      const rect = ctx.canvas.getBoundingClientRect();
-      const endX = e.clientX - rect.left;
-      const endY = e.clientY - rect.top;
-      // Preview line (not saved yet)
-      ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
-      ctx.beginPath();
-      ctx.moveTo(startX, startY);
-      ctx.lineTo(endX, endY);
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.globalAlpha = 0.6;
-      ctx.stroke();
-    });
-
-    ctx.canvas.addEventListener('mouseup', (e) => {
-      if (!drawing) return;
-      const rect = ctx.canvas.getBoundingClientRect();
-      const endX = e.clientX - rect.left;
-      const endY = e.clientY - rect.top;
-      drawings.push({ startX, startY, endX, endY });
-      localStorage.setItem('drawings', JSON.stringify(drawings));
-      drawing = false;
-      chart.update(); // Redraw annotations
-    });
-
-    ctx.canvas.addEventListener('dblclick', () => {
-      drawings = [];
-      localStorage.setItem('drawings', JSON.stringify(drawings));
-      chart.update();
-    });
-
-    // Redraw saved drawings on chart update
-    chart.options.plugins.annotation.annotations.push(...drawings.map(d => ({
-      type: 'line',
-      xMin: d.startX,
-      xMax: d.endX,
-      yMin: d.startY,
-      yMax: d.endY,
-      borderColor: 'white',
-      borderWidth: 2,
-      borderDash: [5, 5],
-      label: { enabled: false }
-    })));
 
     // Live prices
     async function fetchLiveData() {
